Adjust position to avoid tooltip overflow

--- a/src/components/promocode-input/index.module.scss
+++ b/src/components/promocode-input/index.module.scss
@@ -76,7 +76,8 @@
       width: 100%;
     }
     .moreInfo {
-      width: 100%;
+      width: auto;
+      margin-right: 20px;
     }
   }
 }
